[package]
name = "video-toolbox-sys"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"
description = "Rust bindings to Apple's Video Toolbox framework"
license = "MIT"
repository = "https://github.com/bschwind/video-toolbox-sys"

[dependencies]
core-foundation = "0.9"

[build-dependencies]
bindgen = { version = "0.56", default-features = false, features = ["runtime"] }
